WT AI Editor codebase

--- a/client/index.html
+++ b/client/index.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Title & Description -->
     <title>
-      NovaCraft AI | All-in-One AI Platform for Content, Design, and Resumes
+      WT AI Editor | All-in-One AI Platform for Content, Design, and Resumes
     </title>
     <meta
       name="description"
-      content="NovaCraft AI is an all-in-one AI SaaS platform for content creators, bloggers, designers, and job seekers. Use powerful AI tools for writing, image generation, editing, and resume reviewing."
+      content="WT AI Editor is an all-in-one AI SaaS platform for content creators, bloggers, designers, and job seekers. Use powerful AI tools for writing, image generation, editing, and resume reviewing."
     />
 
     <!-- Keywords -->
     <meta
       name="keywords"
-      content="AI writing tools, blog generator, image generator, resume reviewer, AI SaaS, content creator tools, NovaCraft AI, Google Gemini, PERN Stack"
+      content="AI writing tools, blog generator, image generator, resume reviewer, AI SaaS, content creator tools, WT AI Editor, Google Gemini, PERN Stack"
     />
 
     <!-- Author -->
@@ -29,11 +29,11 @@
     <!-- Open Graph (Facebook, LinkedIn, etc.) -->
     <meta
       property="og:title"
-      content="NovaCraft AI | AI-Powered Content & Design Tools"
+      content="WT AI Editor | AI-Powered Content & Design Tools"
     />
     <meta
       property="og:description"
-      content="Create articles, generate images, and optimize resumes with NovaCraft AI — a complete AI SaaS toolkit."
+      content="Create articles, generate images, and optimize resumes with WT AI Editor — a complete AI SaaS toolkit."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novacraft-ai.com" />
@@ -45,7 +45,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="NovaCraft AI | AI Tools for Content Creators and Designers"
+      content="WT AI Editor | AI Tools for Content Creators and Designers"
     />
     <meta
       name="twitter:description"
@@ -69,7 +69,7 @@
       {
         "@context": "https://schema.org",
         "@type": "SoftwareApplication",
-        "name": "NovaCraft AI",
+        "name": "WT AI Editor",
         "image": "https://novacraft-ai.com/logo.png",
         "url": "https://novacraft-ai.com",
         "author": {
@@ -78,7 +78,7 @@
         },
         "applicationCategory": "AI SaaS Platform",
         "operatingSystem": "Web",
-        "description": "NovaCraft AI is a complete AI-powered platform offering tools for blog writing, image generation, and resume reviewing.",
+        "description": "WT AI Editor is a complete AI-powered platform offering tools for blog writing, image generation, and resume reviewing.",
         "offers": {
           "@type": "Offer",
           "price": "0.00",
